js file config done

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
             {% endblock %} </title>
     <link rel="stylesheet" href= "{% static 'styles.css' %}"> <!-- base css if required -->
     <link rel="stylesheet" href= "{% static 'header.css' %}"> <!-- base css if required -->
-    {%block css_files %}{% endblock %} <!-- App- wise CSS-->>
+    {%block css_files %}{% endblock %} <!-- App- wise CSS-->
 </head>
 <body>
     {% include  'includes/header.html' %}
