--- a/myblog/templates/myblog/index.html
+++ b/myblog/templates/myblog/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'myblog/css/templatemo-style.css' %}">                                   <!-- Templatemo style -->
     {% endblock %}
 
-    {% block content %}       
+    {% block content %}    
         <div class="container">
             <div class="row">
                 <div class="tm-left-right-container">
@@ -19,7 +19,7 @@
                             <img src="{% static 'myblog/img/Joy_image1.jpg' %}" alt="Logo" width="40%" height="40%" class= "img-thumbnail">
                             <h1 class="tm-site-name">{{name}}</h1>
                         </div>
-                        <nav class="tm-main-nav">
+                        <nav class="tm-main-nav">  
                             <ul class="tm-main-nav-ul">
                                 <li class="tm-nav-item">
                                     <a href="#welcome" class="tm-nav-item-link">Welcome</a>
@@ -41,11 +41,17 @@
                     
                     <!-- Right column: content -->
                     <div class="tm-right-column">
+                        
                         <figure>
                             <img src="img/neaty-01.jpg" alt="Header image" class="img-fluid">    
                         </figure>
 
                         <div class="tm-content-div">
+                            <section>
+                            <div class= "float-right">
+                                {% include 'myblog/includes/header.html' %} 
+                                </div>
+                            </section>
                             <!-- Welcome section -->
                             <section id="welcome" class="tm-section">
                                 <header>
@@ -180,9 +186,9 @@
     {% endblock %}            
         <!-- load JS files -->
     {% block js_files %}
-        <script src="js/jquery-1.11.3.min.js"></script>             <!-- jQuery (https://jquery.com/download/) -->
-        <script src="js/jquery.magnific-popup.min.js"></script>     <!-- Magnific pop-up (http://dimsemenov.com/plugins/magnific-popup/) -->
-        <script src="js/jquery.singlePageNav.min.js"></script>      <!-- Single Page Nav (https://github.com/ChrisWojcik/single-page-nav) -->
+        <script src="{% static 'myblog/js/jquery-1.11.3.min.js' %}"></script>             <!-- jQuery (https://jquery.com/download/) -->
+        <script src="{% static 'myblog/js/jquery.magnific-popup.min.js' %}"></script>     <!-- Magnific pop-up (http://dimsemenov.com/plugins/magnific-popup/) -->
+        <script src="{% static 'myblog/js/jquery.singlePageNav.min.js' %}"></script>      <!-- Single Page Nav (https://github.com/ChrisWojcik/single-page-nav) -->
         <script>     
        
             $(document).ready(function(){
