basic structure ready

--- a/myblog/templates/myblog/includes/header.html
+++ b/myblog/templates/myblog/includes/header.html
@@ -1,3 +1,26 @@
-<button type="button" class="btn btn-primary btn-circle btn-sm">Blue</button>
-<button type="button" class="btn btn-secondary btn-circle btn-sm">Gray</button>
-<button type="button" class="btn btn-success btn-circle btn-sm">Green</button>
+<nav class="tm-main-nav">  
+    <ul class="tm-main-nav-ul">
+        <li class="tm-nav-item">
+            <a href="#welcome" class="tm-nav-item-link">Introduction</a>
+        </li>
+        <li class="tm-nav-item">
+            <a href="#about" class="tm-nav-item-link">News</a>
+        </li>
+        <li class="tm-nav-item">
+            <a href="#about" class="tm-nav-item-link">Certifications</a>
+        </li>
+        <li class="tm-nav-item">
+            <a href="#galleryone" class="tm-nav-item-link">Publications</a>
+        </li>
+
+        <li class="tm-nav-item">
+            <a href="#contact" class="tm-nav-item-link">Professional Experience</a>
+        </li>
+        <li class="tm-nav-item">
+            <a href="#contact" class="tm-nav-item-link">Research Experience</a>
+        </li>
+        <li class="tm-nav-item">
+            <a href="#contact" class="tm-nav-item-link">Education</a>
+        </li>
+    </ul>
+</nav>    
