--- a/myblog/static/myblog/css/templatemo-style.css
+++ b/myblog/static/myblog/css/templatemo-style.css
@@ -7,8 +7,8 @@ http://www.templatemo.com/tm-501-neaty
 */
 body {
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-	font-size: 20px;
-	font-weight: 300;
+	font-size: 15px;
+	font-weight: 500;
 	overflow-x: hidden;
 }
 
@@ -31,7 +31,7 @@ a:focus {
 .tm-blue-bg a {	color: white; }
 
 .tm-site-name {
-	font-size: 4rem;
+	font-size: 1.5rem;
 	margin-top: 20px;
 }
 
@@ -40,18 +40,18 @@ a:focus {
 	padding-bottom: 40px;
 }
 
-.tm-main-nav { display: none; }
+.tm-main-nav { display: none; margin-top: 5em;}
 
 .tm-main-nav-ul {
-	display: inline-block;
+	display: inline;
 	padding-left: 0;
 }
 
-.tm-section { margin-bottom: 60px; }
-.tm-welcome-title {	font-size: 2.4rem; }
-.tm-section-title {	font-size: 2.2rem; }
-.tm-content-div { padding: 40px; }
-.tm-margin-b-45 { margin-bottom: 45px; }
+.tm-section { margin-bottom: 10px; }
+.tm-welcome-title {	font-size: 1rem; }
+.tm-section-title {	font-size: 1rem; }
+.tm-content-div { padding: 20px; }
+.tm-margin-b-45 { margin-bottom: 20px; }
 .tm-margin-b-30 { margin-bottom: 30px; }
 p { line-height: 2; }
 
@@ -61,8 +61,8 @@ p { line-height: 2; }
 	color: white;
 	cursor: pointer;
 	display: inline-block;
-	font-size: 1.4rem;	
-	padding: 18px 35px;
+	font-size: 1rem;	
+	padding: 18px 20px;
 }
 
 .tm-button-wide { padding: 18px 40px; }
@@ -89,7 +89,7 @@ p { line-height: 2; }
 	margin-right: -5px;
 }
 
-.tm-img-container {	float: left; }
+.tm-img-container {	float: left;}
 
 .tm-img-container-1,
 .tm-img-container-2,
@@ -99,12 +99,12 @@ p { line-height: 2; }
 }
 
 .tm-img-tn {
-	padding-left: 5px;
-	padding-right: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .tm-img-tn {
-	display: block;
+	display: inline-flex;
 	margin: 0 auto;
 }
 
@@ -115,7 +115,7 @@ p { line-height: 2; }
 	border-radius: 0;
 	color: #4286ab;
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-	font-size: 1.3rem;
+	font-size: 1rem;
 }
 
 input::-webkit-input-placeholder,
@@ -144,8 +144,8 @@ textarea:-ms-input-placeholder {
 /* Media Queries */
 @media (min-width: 576px) {
 	.container { width: 100%; }
-	.tm-site-name { margin-top: 35px; }
-	.tm-welcome-title { font-size: 3rem; }
+	.tm-site-name { margin-top: 20px; }
+	.tm-welcome-title { font-size: 1rem; }
 	.tm-img-container-1 { width: 20%; }
 	.tm-img-container-2 { width: 33.3334%; }
 	.tm-img-container-3 { width: 25%; }
@@ -176,25 +176,25 @@ textarea:-ms-input-placeholder {
 
 	.tm-nav-item {
 		cursor: pointer;
-		font-size: 1.5rem;
+		font-size: 0rem;
 		list-style: none;
-		padding: 18px 30px;
+		padding: 1px 1px;
 		transition: all 0.3s ease;
 	}
 
 	.tm-site-name {
-	    font-size: 3.3rem;
+	    font-size: 2rem;
 	    margin-top: 30px;
 	}
 
 	.tm-logo-div {
 	    padding-top: 50px;
-	    padding-bottom: 50px;
+	    padding-bottom: 20px;
 	}
 
-	.tm-section { margin-bottom: 100px; }
+	.tm-section { margin-bottom: 20px; }
 
-	.tm-content-div { padding: 80px 40px 30px 80px;	}
+	.tm-content-div { padding: 80px 20px 30px 80px;	}
 
 	.tm-img-container-1 {
 		margin-bottom: 10px;
@@ -264,13 +264,13 @@ textarea:-ms-input-placeholder {
 @media (max-height: 860px) {
 	.tm-logo-div {
 	    padding-top: 45px;
-	    padding-bottom: 20px;
+	    padding-bottom: 10px;
 	}
 
-	.tm-nav-item { font-size: 1.4rem; }
+	.tm-nav-item { font-size: 1rem; }
 
 	.tm-site-name {
-		font-size: 2.4rem;
+		font-size: 1.5rem;
 		margin-top: 10px;
 	}
 }
@@ -281,5 +281,13 @@ textarea:-ms-input-placeholder {
 	    padding-bottom: 100px;
 	}
 
-	.tm-nav-item { font-size: 1.9rem; }
+	.tm-nav-item { font-size: 1rem; }
+}
+
+
+.it-links:hover a,
+.it-links:active a,
+.it-links:focus a,
+.it-links-link.active {
+	color: #f4ef5e;
 }
