added certificates and fixed introduction

--- a/myblog/templates/myblog/index.html
+++ b/myblog/templates/myblog/index.html
@@ -107,6 +107,46 @@
                                 </ol>
 
                             </section>
+                            
+                            <section id="galleryone" class="tm-section">
+                                <header><strong><h3 class="tm-blue-text  tm-margin-b-30">Certifications</h3></strong></header>
+                                <div class="tm-gallery-container tm-gallery-1">
+                                    
+
+                                    <div class="tm-img-container tm-img-container-1">
+                                        <a href="{% static 'myblog/img/Code In Place.jpg' %}">
+                                            <img src="{% static 'myblog/img/Code In Place.jpg' %}" alt= "CIP Section Leader" class="img-fluid tm-img-tn"></a>    
+                                    </div>
+                                    
+                                    <div class="tm-img-container tm-img-container-1">
+                                        <a href="{% static 'myblog/img/Joy Krishan Das NLP Mentor Certificate-1.jpg' %}">
+                                            <img src="{% static 'myblog/img/Joy Krishan Das NLP Mentor Certificate-1.jpg' %}" alt= "NLP Mentor" class="img-fluid tm-img-tn"></a>    
+                                    </div>
+                                    <div class="tm-img-container tm-img-container-1">
+                                        <a href="{% static 'myblog/img/DeepLearning-1.jpg' %}">
+                                            <img src="{% static 'myblog/img/DeepLearning-1.jpg' %}" alt= "Deep Learning" class="img-fluid tm-img-tn"></a>    
+                                    </div>
+                                    <div class="tm-img-container tm-img-container-1">
+                                        <a href="{% static 'myblog/img/AlgoExpert.jpg' %}">
+                                            <img src="{% static 'myblog/img/AlgoExpert.jpg' %}" alt= "AlgoExpert" class="img-fluid tm-img-tn"></a>    
+                                    </div>
+                                    <div class="tm-img-container tm-img-container-1">
+                                        <a href="{% static 'myblog/img/DeepLearning.AI Tensorflow Developer-1.jpg' %}">
+                                            <img src="{% static 'myblog/img/DeepLearning.AI Tensorflow Developer-1.jpg' %}" alt= "DeepLearning.AI Tensorflow Developer" class="img-fluid tm-img-tn"></a> 
+                                    </div>
+                                    <div class="tm-img-container tm-img-container-1">
+                                        <a href="{% static 'myblog/img/NaturalLanguageProcessing-1.jpg' %}">
+                                            <img src="{% static 'myblog/img/NaturalLanguageProcessing-1.jpg' %}" alt= "Natural Language Processing" class="img-fluid tm-img-tn"></a>
+                                    </div>
+                                    <div class="tm-img-container tm-img-container-1">
+                                        <a href="{% static 'myblog/img/PythonForEverybody-1.jpg' %}">
+                                            <img src="{% static 'myblog/img/PythonForEverybody-1.jpg' %}" alt= "Python For Everybody" class="img-fluid tm-img-tn"></a>
+                                    <div class="tm-img-container tm-img-container-1">
+                                        <a href="{% static 'myblog/img/DjangoForEverybody-1.jpg' %}">
+                                            <img src="{% static 'myblog/img/DjangoForEverybody-1.jpg' %}" alt= "Django For Everybody" class="img-fluid tm-img-tn"></a>
+                                    </div>                                    
+                                </div>
+                            </section>
 
                             <section>
                                 <header>
