--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
             {% endblock %} </title>
     <link rel="stylesheet" href= "{% static 'styles.css' %}"> <!-- base css if required -->
     <link rel="stylesheet" href= "{% static 'header.css' %}"> <!-- base css if required -->
+    <link rel="shortcut icon" type="image/png" href="{% static 'myblog/img/favicon.ico' %}"/>
     {%block css_files %}{% endblock %} <!-- App- wise CSS-->
 </head>
 <body>
