updated the website picture

--- a/myblog/templates/myblog/index.html
+++ b/myblog/templates/myblog/index.html
@@ -16,7 +16,7 @@
                     <!-- Left column: logo and menu -->
                     <div class="tm-blue-bg tm-left-column">                        
                         <div class="tm-logo-div text-xs-center">
-                            <img src="{% static 'myblog/img/Joy_image1.jpg' %}" alt="Logo" width="40%" height="40%" class= "img-thumbnail">
+                            <img src="{% static 'myblog/img/JOY_IMAGE_2.jpg' %}" alt="Logo" width="40%" height="40%" class= "rounded-circle">
                             <h1 class="tm-site-name">{{name}}</h1>
                         </div>
                         <div style="text-align: center">
@@ -115,7 +115,7 @@
 
                                     <div class="tm-img-container tm-img-container-1">
                                         <a href="{% static 'myblog/img/Code In Place.jpg' %}">
-                                            <img src="{% static 'myblog/img/Code In Place.jpg' %}" alt= "CIP Section Leader" class="img-fluid tm-img-tn"></a>    
+                                            <img src="{% static 'myblog/img/Code In Place.jpg' %}" alt= "Section Leader" class="img-fluid tm-img-tn"></a>    
                                     </div>
                                     
                                     <div class="tm-img-container tm-img-container-1">
@@ -228,7 +228,7 @@
                                 
                             </section>
                             <footer>
-                                <p class="tm-copyright-p">Copyright &copy;  Joy Krishan Das (Updated on: {{updatedOn}})</p>
+                                <p class="tm-copyright-p"> &copy; 2022  Joy Krishan Das (Updated on: {{updatedOn}})</p>
                             </footer>
                         </div>  
                         
